update cloud and server language

--- a/docs/3.0rc/deploy/infrastructure-concepts/work-pools.mdx
+++ b/docs/3.0rc/deploy/infrastructure-concepts/work-pools.mdx
@@ -142,7 +142,7 @@ If you don't use the `--type` flag to specify an infrastructure type, you are pr
     | Modal - Push                         | Execute flow runs on Modal. Requires a Modal account. Flow runs are pushed directly to your Modal workspace, without the need for a Prefect worker.  |
     | Prefect Managed                      | Execute flow runs within containers on Prefect managed infrastructure.                                                      |
   </Tab>
-  <Tab title="Prefect server instance">
+  <Tab title="Self-host Prefect server">
 
     | Infrastructure Type           | Description              |
     | ----------------------------  | ------------------------ |
