--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -52,7 +52,7 @@ For example, by running a script or importing the function into an interactive s
 You can also create a flow run by:
 
 - Using external schedulers such as `cron` to invoke a flow function
-- Triggering a [deployment](/3.0rc/deploy/infrastructure-examples/docker/) of that flow on Prefect Cloud or a self-hosted Prefect server instance
+- Triggering a [deployment](/3.0rc/deploy/infrastructure-examples/docker/) of that flow in Prefect Cloud or self-hosted Prefect server
 - Starting a flow run for the deployment through a schedule, the Prefect UI, or the Prefect API
 
 However you run your flow, Prefect monitors the flow run, capturing its state for observability.
