--- a/docs/3.0rc/manage/cloud/index.mdx
+++ b/docs/3.0rc/manage/cloud/index.mdx
@@ -3,7 +3,7 @@ title: Prefect Cloud overview
 description: Observe and orchestrate workflow applications with the Prefect Cloud platform.
 ---
 
-Prefect Cloud is a hosted workflow application platform with all the capabilities of an open source Prefect server instance plus additional features.
+Prefect Cloud is a hosted workflow application platform with all the capabilities of the open source Prefect server plus additional features.
 
 - [Connect to Prefect Cloud](/3.0rc/manage/cloud/connect-to-cloud/) shows how to configure a local execution environment to access Prefect Cloud.
 
