--- a/docs/3.0rc/api-ref/rest-api/index.mdx
+++ b/docs/3.0rc/api-ref/rest-api/index.mdx
@@ -5,13 +5,13 @@ description: Prefect REST API for interacting with the orchestration engine and 
 
 The Prefect API is organized around REST. It is used for communicating data from clients to a self-hosted Prefect server instance so that orchestration can be performed. This API is consumed by clients such as the Prefect Python SDK or the server dashboard.
 
-Prefect Cloud and a locally hosted Prefect server each provide a REST API.
+Prefect Cloud and self-hosted Prefect server each provide a REST API.
 
 - Prefect Cloud:
     - [Interactive Prefect Cloud REST API documentation](https://app.prefect.cloud/api/docs)
     - [Finding your Prefect Cloud details](#finding-your-prefect-cloud-details)
 - A self-hosted server instance:
-    - Interactive REST API documentation for a self-hosted Prefect server instance is available under **Server API** on the sidebar naviagtion or at `http://localhost:4200/docs` or the `/docs` endpoint of the [PREFECT_API_URL](/3.0rc/manage/settings-and-profiles/) you have configured to access the server. You must have the server running with `prefect server start` to access the interactive documentation.
+    - Interactive REST API documentation for self-hosted Prefect server is available under **Server API** on the sidebar naviagtion or at `http://localhost:4200/docs` or the `/docs` endpoint of the [PREFECT_API_URL](/3.0rc/manage/settings-and-profiles/) you have configured to access the server. You must have the server running with `prefect server start` to access the interactive documentation.
     
 ## Interacting with the REST API
 
