--- a/docs/3.0rc/get-started/install.mdx
+++ b/docs/3.0rc/get-started/install.mdx
@@ -60,10 +60,10 @@ pip install -U prefect-client
 You also need an API server, either:
 
 * [Prefect Cloud](/3.0rc/manage/cloud/), a managed solution that provides strong scaling, performance, and security, or
-* Your own hosted [Prefect server instance](/3.0rc/manage/self-host/)
+* [Self-hosted Prefect server](/3.0rc/manage/self-host/), an API server that you run on your own infrastructure where you are responsible for scaling and any authentication and authorization.
 
 Now that you have Prefect installed, go through the [quickstart](/3.0rc/get-started/quickstart/) to try it out.
 
-Learn more about release versions in the [Prefect Release Notes](https://github.com/PrefectHQ/prefect/blob/main/RELEASE-NOTES.md).
+Learn more about release versions in the [Prefect release notes](https://github.com/PrefectHQ/prefect/blob/main/RELEASE-NOTES.md).
 
-See our [Contributing guide](/contribute/dev-contribute/) for instructions on installing Prefect for development.
+See our [Contributing docs](/contribute/dev-contribute/) for instructions on installing Prefect for development.
