--- a/docs/3.0rc/manage/self-host.mdx
+++ b/docs/3.0rc/manage/self-host.mdx
@@ -4,7 +4,7 @@ description: Learn how to self-host your own Prefect server instance.
 ---
 
 <Note>
-To host a Prefect server instance on Kubernetes, check out the prefect-server [Helm chart](https://github.com/PrefectHQ/prefect-helm/tree/main/charts/prefect-server).
+To self-host a Prefect server instance on Kubernetes, check out the prefect-server [Helm chart](https://github.com/PrefectHQ/prefect-helm/tree/main/charts/prefect-server).
 </Note>
 
 After installing Prefect, you have a Python SDK client that can communicate with 
@@ -22,7 +22,7 @@ Your self-hosted server must meet the following requirements and configuration s
 
 SQLite is not packaged with the Prefect installation. But most systems already have SQLite installed, and it is typically bundled with Python.
 
-If you host your own Prefect server instance with a SQLite database, certain Linux versions of SQLite can be problematic.
+If you self-host a Prefect server instance with a SQLite database, certain Linux versions of SQLite can be problematic.
 Compatible versions include Ubuntu 22.04 LTS and Ubuntu 20.04 LTS.
 
 To confirm SQLite is installed, run:
@@ -47,8 +47,9 @@ Disabling certificate validation is insecure and only suggested as an option for
 ### Proxies
 
 Prefect supports communicating with proxies through environment variables.
-Whether you are using Prefect Cloud or hosting your own Prefect server instance, set `HTTPS_PROXY` and 
-`SSL_CERT_FILE` in your environment, and the underlying network libraries route Prefect’s requests appropriately.
+Whether you use a Prefect Cloud account or self-host a Prefect server instance, set `HTTPS_PROXY` and 
+`SSL_CERT_FILE` in your environment. 
+Then the underlying network libraries will route Prefect's requests appropriately.
 
 Alternatively, the Prefect library connects to the API through any proxies you have listed in the `HTTP_PROXY` or 
 `ALL_PROXY` environment variables.
@@ -56,9 +57,9 @@ You may also use the `NO_PROXY` environment variable to specify which hosts shou
 
 For more information about these environment variables, see the [cURL documentation](https://everything.curl.dev/usingcurl/proxies/env).
 
-## Run a local Prefect server
+## Self-host a Prefect server
 
-1. Spin up a local Prefect server UI with the `prefect server start` CLI command in the terminal:
+1. Spin up a self-hosted Prefect server instance UI with the `prefect server start` CLI command in the terminal:
 
 ```bash
 prefect server start
@@ -70,9 +71,9 @@ prefect server start
 
 3. Shut down the Prefect server with ctrl  +  c in the terminal.
 
-### Configure a Prefect server instance
+### Configure self-hosted Prefect server
 
-Go to your terminal session and run this command to set the API URL to point to a Prefect server instance:
+Go to your terminal session and run this command to set the API URL to point to a sefl-hosted Prefect server instance:
 
 ```bash
 prefect config set PREFECT_API_URL="http://127.0.0.1:4200/api"
