--- a/docs/3.0rc/resources/secrets.mdx
+++ b/docs/3.0rc/resources/secrets.mdx
@@ -53,8 +53,8 @@ On the Blocks page, click on **+** to add a new block and select **AWS Secret** 
 Enter a name for your block and enter the secret name from AWS Secrets Manager.
 
 <Note>
-If you're using a self-hosted Prefect server instance, you must register the block types in the 
-newly installed modules before creating blocks.
+If using self-hosted Prefect server, you must register the block types in the 
+newly installed modules before you can create blocks.
 </Note>
 
 ```bash
