--- a/docs/3.0rc/get-started/install.mdx
+++ b/docs/3.0rc/get-started/install.mdx
@@ -44,7 +44,7 @@ Review the `pip install` output messages for the `Scripts` folder path on your s
 
 ## Minimal Prefect installation
 
-The `prefect-client` library is a minimal installation of Prefect designed for interacting with Prefect Cloud or a remote self-hosted server instance.
+The `prefect-client` library is a minimal installation of Prefect designed for interacting with Prefect Cloud or a remote self-hosted Prefect server instance.
 
 `prefect-client` enables a subset of Prefect's capabilities with a smaller installation size, making it ideal for use in lightweight, resource-constrained, or ephemeral environments.
 It omits all CLI and server components found in the `prefect` library.
