--- a/docs/3.0rc/api-ref/server/index.mdx
+++ b/docs/3.0rc/api-ref/server/index.mdx
@@ -1,8 +1,9 @@
 ---
 title: Server API Overview
-description: The Prefect Python SDK API enables you to interact programmatically with the Server REST API and Prefect Cloud.
+description: The Prefect server API enables you to interact programmatically with self-hosted Prefect server.
 ---
 
-The Prefect server API is organized around REST. It is used by the server to work with workflow metadata and enforce orchestration logic. This API is primarily used by Prefect developers.
-
+The self-hosted Prefect server API is organized around REST. 
 Select links in the left navigation menu to explore.
+
+Learn about [self-hosting Prefect](/3.0rc/manage/self-host/).
