Update index.mdx so builds

--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -41,6 +41,7 @@ if __name__ == "__main__":
 <CardGroup cols={3}>
   <Card title="Develop" icon="code" href="/3.0rc/develop/write-flows">
     Write, run, configure, and observe workflows and their tasks, results, artifacts, and more.
+  </Card>
   <Card title="Deploy" icon="rocket" href="/3.0rc/deploy/index">
     Run workflows in local processes or deploy workflows to dynamically provisioned infrastructure.
   </Card>
