--- a/docs/3.0rc/api-ref/rest-api/index.mdx
+++ b/docs/3.0rc/api-ref/rest-api/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: REST API Overview
+title: REST API overview
 description: Prefect REST API for interacting with Prefect Cloud & self-hosted Prefect server.
 ---
 
