--- a/docs/3.0rc/api-ref/rest-api/cloud/index.mdx
+++ b/docs/3.0rc/api-ref/rest-api/cloud/index.mdx
@@ -1,4 +1,8 @@
 ---
-title: Prefect Cloud REST API Reference
-url: https://app.prefect.cloud/api/docs
+title: Cloud API Overview
+description: The Prefect Cloud API enables you to interact programmatically with Prefect Cloud.
 ---
+
+The Prefect Cloud API is organized around REST. 
+
+Explore the interactive [Prefect Cloud REST API reference](https://app.prefect.cloud/api/docs).
