--- a/docs/3.0rc/get-started/index.mdx
+++ b/docs/3.0rc/get-started/index.mdx
@@ -29,7 +29,7 @@ if __name__ == "__main__":
     Learn how to schedule a script to run on remote infrastructure and observe its state.
   </Card>
   <Card title="Prefect Cloud" icon="cloud" href="/3.0rc/manage/cloud/index">
-    Use our hosted workflow platform with all the capabilities of open source Prefect plus additional features.
+    Supercharge Prefect with enhanced governance, security, and performace capabilities.
   </Card>
   <Card title="Upgrade to Prefect 3" icon="sparkles" href="/3.0rc/resources/upgrade-prefect-3">
     Upgrade from Prefect 2 to Prefect 3 to get the latest features and performance enhancements.
@@ -43,7 +43,7 @@ if __name__ == "__main__":
     Write, run, configure, and observe workflows and their tasks, results, artifacts, and more.
   </Card>
   <Card title="Deploy" icon="rocket" href="/3.0rc/deploy/index">
-    Run workflows in local processes or deploy workflows to dynamically provisioned infrastructure.
+    Run workflows in local processes or deploy them to dynamically provisioned infrastructure.
   </Card>
   <Card title="Automate" icon="robot" href="/3.0rc/automate/events/automations-triggers">
     Enable workflows to react to their environment with events, automations, and webhooks.
