--- a/docs/3.0rc/develop/deferred-tasks.mdx
+++ b/docs/3.0rc/develop/deferred-tasks.mdx
@@ -152,7 +152,7 @@ If using Prefect Cloud, set the `PREFECT_API_URL` value to the Prefect Cloud API
 The examples that use docker (examples 4 and 5) use a Prefect server by default.
 You can switch to Prefect Cloud by changing the `PREFECT_API_URL` and adding a variable for your API key in the 
 `docker-compose.yaml`.
-Or use a Prefevct server backed by a PostgreSQL database by setting the `PREFECT_API_DATABASE_CONNECTION_URL`.
+Or use a Prefect server backed by a PostgreSQL database by setting the `PREFECT_API_DATABASE_CONNECTION_URL`.
 
 If using a Prefect server instead of Prefect Cloud, start your server by running the following command:
 
