--- a/docs/3.0rc/develop/deferred-tasks.mdx
+++ b/docs/3.0rc/develop/deferred-tasks.mdx
@@ -154,7 +154,7 @@ You can switch to Prefect Cloud by changing the `PREFECT_API_URL` and adding a v
 `docker-compose.yaml`.
 Or use a Prefect server backed by a PostgreSQL database by setting the `PREFECT_API_DATABASE_CONNECTION_URL`.
 
-If using a Prefect server instead of Prefect Cloud, start your server by running the following command:
+If using Prefect server instead of Prefect Cloud, start your server by running the following command:
 
 ```bash
 prefect server start 
