--- a/docs/3.0rc/api-ref/index.mdx
+++ b/docs/3.0rc/api-ref/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Reference documentation
+title: API & SDK References
 sidebarTitle: Overview
 description: Explore Prefect's auto-generated API & SDK reference documentation.
 ---
