--- a/docs/3.0rc/automate/events/webhook-triggers.mdx
+++ b/docs/3.0rc/automate/events/webhook-triggers.mdx
@@ -259,7 +259,7 @@ identifier, so `body.friendly-name` will not work. Use `body['friendly-name']` i
 those cases.
 </Tip>
 
-Prefect Cloud will attempt to parse any other content type (such as `text/plain`) as if it were JSON first.
+Prefect Cloud will attempt to parse any other media type (such as `text/plain`) as if it were JSON first.
 In any case where the body cannot be transformed into JSON, it is made available to your
 templates as a Python `str`.
 
