--- a/docs/3.0rc/manage/cloud/manage-users/manage-roles.mdx
+++ b/docs/3.0rc/manage/cloud/manage-users/manage-roles.mdx
@@ -8,8 +8,8 @@ access to the appropriate level within specific workspaces.
 
 Role-based access controls (RBAC) enable you to assign users granular permissions to perform certain activities.
 
-Enterprise account Admins can create custom roles for users to give users access to capabilities 
-beyond the scope of Prefect’s built-in workspace roles.
+Enterprise account adminstrators can create custom roles for users to give users access to capabilities 
+beyond the scope of Prefect's built-in workspace roles.
 
 ## Built-in roles
 
@@ -23,12 +23,19 @@ The following sections outline the abilities of the built-in, Prefect-defined ac
 ### Account-level roles
 
 The following built-in roles have permissions across an account in Prefect Cloud.
+{/*
+<!-- vale off -->
+*/}
 
 | Role   | Abilities                                                                                                                                                                                                                                                                                                                                                                                 |
 | ------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | Owner  | - Set/change all account profile settings allowed to be set/changed by a Prefect user. <br /> - Add and remove account members, and their account roles. <br /> - Create and delete service accounts in the account. <br /> - Create workspaces in the account. <br /> - Implicit workspace owner access on all workspaces in the account. <br /> - Bypass SSO. |
 | Admin  | - Set/change all account profile settings allowed to be set/changed by a Prefect user. <br /> - Add and remove account members, and their account roles. <br /> - Create and delete service accounts in the account. <br /> - Create workspaces in the account. <br /> - Implicit workspace owner access on all workspaces in the account. <br /> - Cannot bypass SSO.  |
 | Member | - View account profile settings. <br /> - View workspaces you have access to in the account. <br /> - View account members and their roles. <br /> - View service accounts in the account.                                                                                                                                                                |
+
+{/*
+<!-- vale on -->
+*/}
 
 ### Workspace-level roles
 
