--- a/docs/3.0rc/resources/upgrade-agents-to-workers.mdx
+++ b/docs/3.0rc/resources/upgrade-agents-to-workers.mdx
@@ -119,6 +119,10 @@ This new work pool replaces your infrastructure block.
 You can use the [`.publish_as_work_pool`](https://docs.prefect.io/2.19.2/api-ref/prefect/infrastructure/#prefect.infrastructure.Infrastructure.publish_as_work_pool) 
 method on any infrastructure block to create a work pool with the same configuration.
 
+{/*
+<!-- vale off -->
+*/}
+
 For example, if you have a `KubernetesJob` infrastructure block named 'my-k8s-job', you can 
 create a work pool with the same configuration with this script:
 
@@ -129,8 +133,12 @@ from prefect.infrastructure import KubernetesJob
 KubernetesJob.load("my-k8s-job").publish_as_work_pool()
 ```
 
-    Running this script creates a work pool named 'my-k8s-job' with the same configuration 
-    as your infrastructure block.
+Running this script creates a work pool named 'my-k8s-job' with the same configuration as your infrastructure block.
+
+{/*
+<!-- vale on -->
+*/}
+
 
 <Tip>
 **Serving flows**
