--- a/docs/3.0rc/manage/cloud/manage-users/manage-roles.mdx
+++ b/docs/3.0rc/manage/cloud/manage-users/manage-roles.mdx
@@ -47,7 +47,7 @@ The following built-in roles have permissions within a given workspace in Prefec
 | Runner    | All Viewer abilities, _plus_: <br /> - Run deployments within a workspace.                                                                                                                                                                                                                                                                                                                                                                                         |
 | Developer | All Runner abilities, _plus_: <br /> - Run flows within a workspace. <br /> - Delete flow runs within a workspace. <br /> - Create, edit, and delete deployments within a workspace. <br /> - Create, edit, and delete work pools within a workspace. <br /> - Create, edit, and delete all blocks and their secrets within a workspace. <br /> - Create, edit, and delete automations within a workspace. <br /> - View all workspace settings. |
 
-| Owner     | All Developer abilities, _plus_: <br /> - Add and remove account members, and set their role within a workspace. <br /> - Set the workspace’s default workspace role for all users in the account. <br /> - Set, view, edit workspace settings.                                                                                                                                                                                                    |
+| Owner     | All Developer abilities, _plus_: <br /> - Add and remove account members, and set their role within a workspace. <br /> - Set the workspace's default workspace role for all users in the account. <br /> - Set, view, edit workspace settings.                                                                                                                                                                                                    |
 | Worker     | The minimum scopes required for a worker to poll for and submit work.|
 
 ## Custom workspace roles
@@ -56,12 +56,20 @@ The built-in roles serve the needs of most users, but custom roles give users ac
 specific permissions within a workspace.
 
 Custom roles can inherit permissions from a built-in role.
-This enables tweaks to the role to meet your team’s needs, while ensuring users still benefit 
-from Prefect’s default workspace role permission curation as new capabilities becomes available.
+This enables tweaks to the role to meet your team's needs, while ensuring users still benefit 
+from Prefect's default workspace role permission curation as new capabilities becomes available.
 
-You can create custom workspace roles independently of Prefect’s built-in roles. This option gives 
+{/*
+<!-- vale off -->
+*/}
+
+You can create custom workspace roles independently of Prefect's built-in roles. This option gives 
 workspace admins full control of user access to workspace capabilities. However, for non-inherited custom roles, 
-the workspace admin takes on the responsibility for monitoring and setting permissions for new capabilities as it is released.
+the workspace Admin takes on the responsibility for monitoring and setting permissions for new capabilities as it is released.
+
+{/*
+<!-- vale on -->
+*/}
 
 See [Role permissions](#workspace-role-permissions) for details of permissions you may set for custom roles.
 
