--- a/docs/3.0rc/deploy/run-flows-in-local-processes.mdx
+++ b/docs/3.0rc/deploy/run-flows-in-local-processes.mdx
@@ -12,7 +12,7 @@ The serve method creates a deployment for the flow and starts a long-running pro
 that monitors for work from the Prefect server.
 When work is found, it is executed within its own isolated subprocess.
 
-```python title="hello_world.py"
+```python hello_world.py
 from prefect import flow
 
 
