--- a/docs/3.0rc/develop/write-tasks.mdx
+++ b/docs/3.0rc/develop/write-tasks.mdx
@@ -3,7 +3,8 @@ title: Write and run tasks
 description: Learn the basics of writing tasks.
 ---
 
-A Prefect task is a Python function decorated with `@task` that represents a discrete unit of work in a Prefect workflow. 
+A Prefect task is a discrete unit of work in a Prefect workflow. 
+You can turn any Python function into a task by adding an `@task` decorator to it.
 Tasks can:
 
 - Take inputs, perform work, and return outputs
