--- a/docs/3.0rc/develop/write-tasks.mdx
+++ b/docs/3.0rc/develop/write-tasks.mdx
@@ -27,7 +27,7 @@ Flows and tasks share some common features:
 
 ## Example task
 
-Here's an example that moves a request from a flow into a task:
+Here's an example of a simple flow with a single task:
 
 ```python repo_info.py
 import httpx
